iteration to color moved to shader glsl using lwjgl 3 ready 1